--- a/css/custom.css
+++ b/css/custom.css
@@ -81,8 +81,8 @@
 .btn-area a {
     background: none repeat scroll 0 0 #f04e23;
     color: #fff;
-    font-size: 1.1em;
-    padding: 10px 20px;
+    font-size: 0.8em;
+    padding: 10px;
     text-decoration: none;
     text-transform: uppercase;
 }
